--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "test",
+  "name": "parkinglot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "parking": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
