--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "parking": "echo \"Error: no test specified\" && exit 1"
+    "parkinglot": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
